--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestThreadMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestThreadMain.xaml
@@ -12,6 +12,8 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+    
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"    
 
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
@@ -34,109 +36,135 @@
 
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <!--
+        TODO(crhodes)
+        This is setup for a grid at the top and drill down detail below.
+        Toss what is not needed.
+    -->
 
-        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
-                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
+    <dxlc:LayoutControl Orientation="Vertical" >
 
-        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <dxlc:LayoutGroup Orientation="Vertical" >
 
-            <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="publishedDate" >
-                <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                </dxg:GridColumn.EditSettings>
-            </dxg:GridColumn>
-            <dxg:GridColumn FieldName="lastUpdatedDate" >
-                <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                </dxg:GridColumn.EditSettings>
-            </dxg:GridColumn>
-            <dxg:GridColumn FieldName="properties.CodeReviewThreadType.type" />
-            <dxg:GridColumn FieldName="properties.CodeReviewThreadType.value" Header="CodeReviewThreadType"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewVoteResult.value" Header="CodeReviewVoteResult"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewVotedByIdentity.value" Header="CodeReviewVotedByIdentity"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewVotedByInitiatorIdentity.value" Header="CodeReviewVotedByInitiatorIdentity"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewPolicyType.value" Header="CodeReviewPolicyType"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewStatus.value" Header="CodeReviewStatus"/>
-            <dxg:GridColumn FieldName="properties.LinkedWorkItems.value" Header="LinkedWorkItems"/>
-            <dxg:GridColumn FieldName="properties.CodeReviewStatusUpdateAssociatedCommit.value" Header="CodeReviewStatusUpdateAssociatedCommit"/>
-            <dxg:GridColumn FieldName="properties.BypassPolicy.value" Header="BypassPolicy"/>
-            <dxg:GridColumn FieldName="isDeleted" />
-
-            
-        </dxg:GridControl>
-
-        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
-            <dxlc:LayoutItem Label="Url" >
-                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
-            </dxlc:LayoutItem>
-
-            <dxlc:LayoutItem Height="400">                
-
-            <dxg:GridControl
-                    ItemsSource="{Binding Results.SelectedItem.comments}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                <dxg:GridColumn FieldName="id" />
-                <dxg:GridColumn FieldName="parentCommentId" />
-                    <dxg:GridColumn FieldName="author.displayName" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="content" BestFitModeOnSourceChange="VisibleRows" />
-                <dxg:GridColumn FieldName="commentType" />
+            <dxlc:LayoutGroup View="GroupBox"
+                              Collapsed="LayoutGroup_ExpansionChanged" 
+                              Expanded="LayoutGroup_ExpansionChanged"
+                              IsCollapsible="True" IsCollapsed="False" >
                 
-                <dxg:GridColumn FieldName="publishedDate" >
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-                <dxg:GridColumn FieldName="lastUpdatedDate" >
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-                <dxg:GridColumn FieldName="lastContentUpdatedDate" >
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
-                    <!--<dxg:GridColumn FieldName="properties.CodeReviewThreadType.type" />
-                <dxg:GridColumn FieldName="properties.CodeReviewThreadType.value" Header="CodeReviewThreadType"/>
-                <dxg:GridColumn FieldName="properties.CodeReviewVoteResult.value" Header="CodeReviewVoteResult"/>
-                <dxg:GridColumn FieldName="properties.CodeReviewVotedByIdentity.value" Header="CodeReviewVotedByIdentity"/>
-                <dxg:GridColumn FieldName="properties.CodeReviewVotedByInitiatorIdentity.value" Header="CodeReviewVotedByInitiatorIdentity"/>
-                <dxg:GridColumn FieldName="properties.CodeReviewPolicyType.value" Header="CodeReviewPolicyType"/>
-                <dxg:GridColumn FieldName="properties.CodeReviewStatus.value" Header="CodeReviewStatus"/>
-                <dxg:GridColumn FieldName="properties.Linkedworkitems.value" Header="Linkedworkitems"/>
-                <dxg:GridColumn FieldName="properties.Codereviewstatus.value" Header="Codereviewstatus"/>
-                <dxg:GridColumn FieldName="properties.Codereviewstatusupdateassociatedcommit.value" Header="Codereviewstatusupdateassociatedcommit"/>
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+                                                Count="{Binding Results.Count, Mode=TwoWay}"/>
 
-                <dxg:GridColumn FieldName="properties.Bypasspolicy.value" Header="Bypasspolicy"/>
+                    <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                                ItemsSource="{Binding Results.ResultItems}"
+                                SelectedItem="{Binding Results.SelectedItem}"
+                                FontSize="12"
+                                ScrollViewer.CanContentScroll="True"
+                                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-                <dxg:GridColumn FieldName="properties.Codereviewstatusupdatedbyidentity.value" Header="Codereviewstatusupdatedbyidentity"/>
-                <dxg:GridColumn FieldName="status" />
-                <dxg:GridColumn FieldName="isDeleted" />-->
+                        <dxg:GridColumn FieldName="id" />
+                        <dxg:GridColumn FieldName="publishedDate" BestFitModeOnSourceChange="VisibleRows" >
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="lastUpdatedDate" BestFitModeOnSourceChange="VisibleRows">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
 
+                        <dxg:GridColumn FieldName="properties.CodeReviewThreadType.value" Header="CR ThreadType"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewVoteResult.value" Header="CR VoteResult"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewVotedByIdentity.value" Header="CR VotedByIdentity"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewVotedByInitiatorIdentity.value" Header="CR VotedByInitiatorIdentity"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewPolicyType.value" Header="CR PolicyType"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewStatus.value" Header="CR Status"/>
+                        <dxg:GridColumn FieldName="properties.LinkedWorkItems.value" Header="LinkedWorkItems"/>
+                        <dxg:GridColumn FieldName="properties.CodeReviewStatusUpdateAssociatedCommit.value" Header="CR StatusUpdateAssociatedCommit"/>
+                        <dxg:GridColumn FieldName="properties.BypassPolicy.value" Header="BypassPolicy"/>
+                        <dxg:GridColumn FieldName="isDeleted" />
+            
+                    </dxg:GridControl>
 
-            </dxg:GridControl>
-            </dxlc:LayoutItem>
+                    <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                        <dxlc:LayoutItem Label="Url" >
+                            <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+                        </dxlc:LayoutItem>
+
+                        <dxlc:LayoutItem Height="200">                
+
+                            <dxg:GridControl
+                                    ItemsSource="{Binding Results.SelectedItem.comments}"
+                                    FontSize="12"
+                                    ScrollViewer.CanContentScroll="True"
+                                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                                <dxg:GridColumn FieldName="id" />
+                                <dxg:GridColumn FieldName="parentCommentId" />
+                                    <dxg:GridColumn FieldName="author.displayName" BestFitModeOnSourceChange="VisibleRows"/>
+                                    <dxg:GridColumn FieldName="content" BestFitModeOnSourceChange="VisibleRows" />
+                                <dxg:GridColumn FieldName="commentType" />
+
+                                <dxg:GridColumn FieldName="publishedDate" BestFitModeOnSourceChange="VisibleRows">
+                                    <dxg:GridColumn.EditSettings>
+                                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                                    </dxg:GridColumn.EditSettings>
+                                </dxg:GridColumn>
+                                <dxg:GridColumn FieldName="lastUpdatedDate" BestFitModeOnSourceChange="VisibleRows">
+                                    <dxg:GridColumn.EditSettings>
+                                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                                    </dxg:GridColumn.EditSettings>
+                                </dxg:GridColumn>
+                                <dxg:GridColumn FieldName="lastContentUpdatedDate" BestFitModeOnSourceChange="VisibleRows">
+                                    <dxg:GridColumn.EditSettings>
+                                        <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                                    </dxg:GridColumn.EditSettings>
+                                </dxg:GridColumn>
+
+                            </dxg:GridControl>
+                
+                        </dxlc:LayoutItem>
+
+                    </dxlc:LayoutGroup>
+
+                </Grid>
+
+            </dxlc:LayoutGroup>
+
+            <!--
+                This shows the items dependent on a PullRequestThread in separate tabs
+                The particular information is in a separate view.
+            -->
+
+            <dxlc:LayoutGroup Orientation="Vertical" View="Tabs" Height="300">
+
+                <dxlc:LayoutGroup.GroupBoxStyle>
+                    <Style TargetType="dxlc:GroupBox">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="TitleVisibility" Value="Collapsed" />
+                    </Style>
+                </dxlc:LayoutGroup.GroupBoxStyle>
+
+                <dxlc:LayoutGroup Header="Thread Comments" >
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestThreadCommentMainRegion}" />
+                </dxlc:LayoutGroup>
+
+            </dxlc:LayoutGroup>
 
         </dxlc:LayoutGroup>
 
-    </Grid>
+    </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
