--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
@@ -1,8 +1,8 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.CommitMain"
+    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestIterationChangeMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://prismlibrary.com/"
+    xmlns:prism="http://www.codeplex.com/prism"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
@@ -12,9 +12,9 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    
-    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
 
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"
+    
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
@@ -22,7 +22,7 @@
 
     xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
 
-    prism:ViewModelLocator.AutoWireViewModel="False"
+    prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
@@ -36,6 +36,12 @@
 
     </UserControl.Resources>
 
+    <!--
+        TODO(crhodes)
+        This is setup for a grid at the top and drill down detail below.
+        Toss what is not needed.
+    -->
+    
     <dxlc:LayoutControl Orientation="Vertical" >
 
         <dxlc:LayoutGroup Orientation="Vertical" >
@@ -43,9 +49,8 @@
             <dxlc:LayoutGroup View="GroupBox"
                               Collapsed="LayoutGroup_ExpansionChanged" 
                               Expanded="LayoutGroup_ExpansionChanged"
-                              IsCollapsible="True" IsCollapsed="False" 
-                              dxlc:LayoutControl.AllowVerticalSizing="True">
-                
+                              IsCollapsible="True" IsCollapsed="False" >
+                              
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -57,58 +62,39 @@
                                                 Count="{Binding Results.Count, Mode=TwoWay}"/>
 
                     <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                                ItemsSource="{Binding Results.ResultItems}"
-                                SelectedItem="{Binding Results.SelectedItem}"
-                                FontSize="12"
-                                ScrollViewer.CanContentScroll="True"
-                                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                                ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-                        <dxg:GridColumn FieldName="commitId" BestFitModeOnSourceChange="VisibleRows"/>
-            
-                        <dxg:GridColumn FieldName="author.name" Header="Author" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="author.date" Header="Authored Date" Width="150">
+                        ItemsSource="{Binding Results.ResultItems}"
+                        SelectedItem="{Binding Results.SelectedItem}"
+                        FontSize="12"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto">
+                                
+                        <dxg:GridColumn FieldName="xxx" Header="XXX" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="date" Header="Date" Width="150">
                             <dxg:GridColumn.EditSettings>
                                 <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                             </dxg:GridColumn.EditSettings>
                         </dxg:GridColumn>
-            
-                        <dxg:GridColumn FieldName="committer.name" Header="Committer" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Width="150">
-                            <dxg:GridColumn.EditSettings>
-                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                            </dxg:GridColumn.EditSettings>
-                        </dxg:GridColumn>
-
-                        <dxg:GridColumn FieldName="changeCounts.Add" Header="Adds" Width="50" />
-                        <dxg:GridColumn FieldName="changeCounts.Delete" Header="Deletes" Width="50" />
-                        <dxg:GridColumn FieldName="changeCounts.Edit" Header="Edits" Width="50" />
-                        <dxg:GridColumn FieldName="comment" Width="*"/>
-                        <dxg:GridColumn FieldName="commentTruncated" />            
-                        <!--<dxg:GridColumn FieldName="remoteUrl" BestFitModeOnSourceChange="VisibleRows"/>-->
-            
+                        
                     </dxg:GridControl>
 
-                    <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                    <dxlc:LayoutGroup Grid.Row="2" Header="Selected Item Details" 
+                                      Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" >
                         <dxlc:LayoutItem Label="Url" >
                             <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
                         </dxlc:LayoutItem>
-
-                        <dxlc:LayoutItem Label="RemoteUrl" >
-                            <dxe:TextEdit Text="{Binding Results.SelectedItem.remoteUrl}" />
-                        </dxlc:LayoutItem>
                     </dxlc:LayoutGroup>
 
-                </Grid>
+                </Grid>                
 
             </dxlc:LayoutGroup>
 
             <!--
-                This shows the items dependent on a Pull Request in separate tabs
+                This shows the items dependent on a PullRequestIterationChange in separate tabs
                 The particular information is in a separate view.
             -->
-
-            <dxlc:LayoutGroup Orientation="Vertical" View="Tabs" >
+            
+            <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
 
                 <dxlc:LayoutGroup.GroupBoxStyle>
                     <Style TargetType="dxlc:GroupBox">
@@ -120,19 +106,14 @@
                     </Style>
                 </dxlc:LayoutGroup.GroupBoxStyle>
 
-                 <!--
-                    TODO(crhodes)
-                    Need to figure out how to load two CommitChangeMainRegions
-                -->
-                
-                <dxlc:LayoutGroup Header="CommitChanges" >
-                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.RepositoryCommitChangeMainRegion}" />
+                <dxlc:LayoutGroup Header="XXX Detail" >
+                    <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.XXX}" />-->
                 </dxlc:LayoutGroup>
 
             </dxlc:LayoutGroup>
 
         </dxlc:LayoutGroup>
 
-    </dxlc:LayoutControl>
+    </dxlc:LayoutControl>                
 
 </vncmvvm:ViewBase>
