--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
@@ -42,7 +42,7 @@
         Toss what is not needed.
     -->
     
-    <dxlc:LayoutControl Orientation="Vertical" >
+    <dxlc:LayoutControl Orientation="Vertical">
 
         <dxlc:LayoutGroup Orientation="Vertical" >
 
@@ -69,12 +69,18 @@
                         ScrollViewer.HorizontalScrollBarVisibility="Auto"
                         ScrollViewer.VerticalScrollBarVisibility="Auto">
                                 
-                        <dxg:GridColumn FieldName="xxx" Header="XXX" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="date" Header="Date" Width="150">
+                        <dxg:GridColumn FieldName="changeTrackingId" Header="Change TrackingId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="changeId" Header="ChangeId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="changeType" Header="ChangeType" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="item.objectId" Header="Item.objectId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="item.originalObjectId" Header="Item.originalObjectId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="item.path" Header="Item.path" BestFitModeOnSourceChange="VisibleRows"/>
+                        
+                        <!--<dxg:GridColumn FieldName="changeId" Header="Date" Width="150">
                             <dxg:GridColumn.EditSettings>
                                 <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                             </dxg:GridColumn.EditSettings>
-                        </dxg:GridColumn>
+                        </dxg:GridColumn>-->
                         
                     </dxg:GridControl>
 
@@ -92,7 +98,7 @@
             <!--
                 This shows the items dependent on a PullRequestIterationChange in separate tabs
                 The particular information is in a separate view.
-            -->
+            --><!--
             
             <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
 
@@ -107,10 +113,10 @@
                 </dxlc:LayoutGroup.GroupBoxStyle>
 
                 <dxlc:LayoutGroup Header="XXX Detail" >
-                    <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.XXX}" />-->
+                    --><!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.XXX}" />--><!--
                 </dxlc:LayoutGroup>
 
-            </dxlc:LayoutGroup>
+            </dxlc:LayoutGroup>-->
 
         </dxlc:LayoutGroup>
 
